[gd_scene load_steps=3 format=3 uid="uid://car_select_scene"]

[ext_resource type="FontFile" uid="uid://bxal3o2bgkqeo" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="1_font"]
[ext_resource type="Script" path="res://scenes/menu/CarSelect.gd" id="2_script"]

[node name="CarSelect" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.6)

[node name="Header" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 15.0
offset_right = 380.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 28
text = "SELECT CAR"

[node name="CarPreview" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 130.0
offset_right = 320.0
offset_bottom = 280.0
expand_mode = 1
stretch_mode = 5

[node name="LeftButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 170.0
offset_right = 70.0
offset_bottom = 230.0
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 36
text = "<"

[node name="RightButton" type="Button" parent="."]
layout_mode = 0
offset_left = 330.0
offset_top = 170.0
offset_right = 380.0
offset_bottom = 230.0
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 36
text = ">"

[node name="CarName" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 380.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 40
text = "AE86 Trueno"
horizontal_alignment = 1

[node name="CarDescription" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 290.0
offset_right = 380.0
offset_bottom = 360.0
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 18
text = "Lightweight FR coupe."
horizontal_alignment = 1
autowrap_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 370.0
offset_right = 380.0
offset_bottom = 550.0

[node name="PowerLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 20
text = "POWER"

[node name="PowerBar" type="ProgressBar" parent="StatsContainer"]
layout_mode = 2
value = 50.0
show_percentage = false

[node name="WeightLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 20
text = "WEIGHT"

[node name="WeightBar" type="ProgressBar" parent="StatsContainer"]
layout_mode = 2
value = 50.0
show_percentage = false

[node name="GripLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 20
text = "GRIP"

[node name="GripBar" type="ProgressBar" parent="StatsContainer"]
layout_mode = 2
value = 50.0
show_percentage = false

[node name="HandlingLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 20
text = "HANDLING"

[node name="HandlingBar" type="ProgressBar" parent="StatsContainer"]
layout_mode = 2
value = 50.0
show_percentage = false

[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
